2009-12-05  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/x-cycle.jl: make cycle-class don't ignore window-order [Daniel M. German]

2009-12-05  Teika Kazura <teika@lavabit.com>
	* lisp/sawfish/wm/custom-defaults.jl
	* lisp/sawfish/wm/ext/match-window.jl
	* man/news.texi
	* man/sawfish.texi: New grammar for 'add-window-matcher' and 'remove-window-matcher'.

	* lisp/sawfish/wm/commands/move-resize.jl: Minor bugfix. Correct integer type is used, instead of "round".

	* README.IMPORTANT
	* lisp/sawfish/wm/viewport.jl
	* man/news.texi
	* man/sawfish.texi
	* man/user-doc.texi: Doc improvements.

2009-11-28  Teika Kazura <teika@lavabit.com>
	* lisp/sawfish/wm/ext/match-window.jl: New grouping for configurator items. Group "State" is removed. New items for 1.6, "fullscreen" and "fullscreen-xinerama" are combined into "maximize".

	* man/news.texi: Description on GNOME is completed. The error in the previous edit (some lines dup) is fixed.

2009-11-21  Teika Kazura <teika@lavabit.com>
	* lisp/sawfish/wm/util/compat.jl
	* man/news.texi: Custom var 'uniconify-to-current-viewport' is deprecated, but valid again.

	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/state/maximize.jl
	* lisp/sawfish/wm/util/edges.jl
	* lisp/sawfish/wm/viewport.jl
	* man/sawfish.texi: `viewport-offset' is renamed to `viewport-offset-pixel'.

	* lisp/sawfish/wm/viewport.jl
	* man/sawfish.texi: Doc bugfix of window-absolute-position.

	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/commands/help.jl
	* lisp/sawfish/wm/commands/launcher.jl
	* lisp/sawfish/wm/commands/user.jl
	* lisp/sawfish/wm/ext/apps-menu.jl
	* lisp/sawfish/wm/integration/gnome.jl
	* lisp/sawfish/wm/integration/kde.jl
	* lisp/sawfish/wm/menus.jl
	* lisp/sawfish/wm/workspace.jl: Renamed wm/commands/user.jl to wm/commands/launcher.jl. Necessary changes for 'define-structure' and module openings are included.

	* lisp/sawfish/wm/commands/launcher.jl
	* man/news.texi