@@ -192,7 +192,7 @@ Sawfish now generates application menu automatically, by reading
 own applications menu and auto generated one, then set your own in
 @code{user-apps-menu} instead of @code{apps-menu}.
 
-Root menu is revamped, too. [Christopher Bratusek]
+Root and Window-History menus are revamped, too. [Christopher Bratusek]
 
 Now you can reboot and shutdown your computer from the root menu ->
 ``session'', but the user needs the appropriate privilege. For a way
