@@ -1,6 +1,8 @@
 2009-12-05  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/commands/x-cycle.jl: make cycle-class don't ignore window-order [Daniel M. German]
 
+	* lisp/sawfish/wm/ext/window-history.jl: more commands in the window-history-menu
+
 2009-12-05  Teika Kazura <teika@lavabit.com>
 	* lisp/sawfish/wm/custom-defaults.jl
 	* lisp/sawfish/wm/ext/match-window.jl
